# TicTacToe

./: .gitignore  .pre-commit-config.yaml  Agent.py  DeepQAgent.py  DeepQLearningAgent.py  Display.py  DisplayTest.ipynb  DisplayTest.py  Evaluation.py  FrozenLake.ipynb  LICENSE  Matrix.py  Nebenrechnungen.ipynb  Nebenrechnungen.lyx  QAgent.py  README.md  SymmetricMatrix.py  SymmetricTicTacToe.ipynb  Test.ipynb  TicTacToe.ipynb  TicTacToe.py  TicTacToe1.ipynb  TicTacToe2.ipynb  TicTacToeDeepQLearning.ipynb  TicTacToeDeepQLearning2.ipynb  TicTacToeDisplay.py  TicTacToeQLearning.ipynb  game_types.py  my_types.py  playGame.py  pyproject.toml  pyrightconfig.json  stuff.ipynb  tests.py
.github/workflows/: python-package.yml
docs/: Nebenrechnungen.lyx
models/: q_network_3x3x3_O.pth  q_network_3x3x3_X.pth
notebooks/: Nebenrechnungen.ipynb  TicTacToeDeepQLearning.ipynb  TicTacToeDeepQLearning.py  TicTacToeDeepQLearning2.ipynb  TicTacToeQLearning.ipynb
play/: play_against_model.py
src/TicTacToe/: Agent.py  DeepQAgent.py  Display.py  DisplayTest.py  EquivariantNN.py  Evaluation.py  EvaluationMixin.py  QAgent.py  QNetworks.py  ReplayBuffers.py  SymmetricMatrix.py  TicTacToe.py  Utils.py  game_types.py
tests/: test_agent.py  test_deep_q_agent.py  test_display.py  test_equivariant_nn.py  test_integration.py  test_q_agent.py  test_q_networks.py  test_replay_buffer.py  test_symmetric_matrix.py  test_tic_tac_toe.py  test_utils.py  tests.py
train/: TicTacToeDeepQLearning.py
train_and_play/: play_O_against_model.py  play_X_against_model.py  train_dqn_sweep.py  train_model.py
training/: TicTacToeDeepQLearning.py
