[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120


[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = [
#    "E501",
#    "UP",  # pyupgrade
#    "D",   # pydocstyle
]

# [tool.ruff.lint.pydocstyle]
# convention = "google"
