[tool.poetry]
name = "tictactoe"
version = "0.5.0"
description = "Teach the computer to play Tic Tac Toe using reinforcement learning."
authors = ["Jakob Löber <jakob@physik.tu-berlin.de>"]
packages = [
    { include = "TicTacToe", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
asttokens = "2.4.1"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
decorator = "5.1.1"
dill = "0.3.9"
docker-pycreds = "0.4.0"
executing = "2.1.0"
filelock = "3.16.1"
fsspec = "2024.10.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
idna = "3.10"
ipython = "8.29.0"
jedi = "0.19.2"
jinja2 = "3.1.4"
markupsafe = "3.0.2"
matplotlib = "^3.8.0"
mpmath = "1.3.0"
networkx = "3.4.2"
numpy = "2.1.3"
parso = "0.8.4"
pexpect = "4.9.0"
platformdirs = "4.3.6"
prompt-toolkit = "3.0.48"
protobuf = "5.28.3"
psutil = "6.1.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pygments = "2.18.0"
pyyaml = "6.0.2"
requests = "2.32.3"
sentry-sdk = "2.19.0"
setproctitle = "1.3.4"
setuptools = "75.6.0"
six = "1.16.0"
smmap = "5.0.1"
stack-data = "0.6.3"
torch = "^2.5.1"
traitlets = "5.14.3"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
wandb = "0.18.7"
wcwidth = "0.2.13"
ruff = "^0.8.0"
ipykernel = "^6.29.5"
pytest = "^8.3.3"
pytest-cov = "^6.1.1"
coverage = "^7.6.8"
tqdm = "^4.67.1"
scipy = "^1.14.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
coverage = "^7.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120
exclude = ["**/*.ipynb"]

[tool.coverage.run]
omit = [
    # omit this single file
    "src/TicTacToe/Evaluation.py",
    "src/TicTacToe/DisplayTest.py",
    ]
